feat: enhance playlist creation with timestamp and improve error messages

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
           <option value="dateCreated">Date Created</option>
         </select>
         <ul id="playlist-list"></ul>
-        <input type="text" id="playlist-name" placeholder="New Playlist Name" />
+        <input id="playlist-name" placeholder="New playlist name" />
         <button id="create-playlist">Create Playlist</button>
       </section>
       <section id="music">
