--- a/public/playlist.html
+++ b/public/playlist.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Playlist Details</title>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <h1 id="title"></h1>
@@ -15,6 +17,5 @@
       </select>
     </label>
     <div id="groups"></div>
-    <script src="app.js"></script>
   </body>
 </html>
