feat: add song addition functionality to playlists with input validation

--- a/public/playlist.html
+++ b/public/playlist.html
@@ -17,5 +17,12 @@
       </select>
     </label>
     <div id="groups"></div>
+    <div id="add-song-form">
+      <input id="new-title" placeholder="Title" />
+      <input id="new-artist" placeholder="Artist" />
+      <input id="new-genre" placeholder="Genre" />
+      <button id="add-to-playlist">Add Song</button>
+    </div>
+    <ul id="song-list"></ul>
   </body>
 </html>
