--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,16 @@
         <ul id="playlist-list"></ul>
         <input id="playlist-name" placeholder="New playlist name" />
         <button id="create-playlist">Create Playlist</button>
+        <h1 id="title"></h1>
+        <label
+          >Group by:
+          <select id="group-by">
+            <option value="genre">Genre</option>
+            <option value="artist">Artist</option>
+            <option value="title">Title</option>
+          </select>
+        </label>
+        <div id="groups"></div>
       </section>
       <section id="music">
         <h2>Manage Music</h2>
@@ -41,5 +51,6 @@
       <p>&copy; 2025 Music Playlist App</p>
     </footer>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   </body>
 </html>
